--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,7 @@ author = ["Tobias Görgens <tobi.goergens@gmail.com>"]
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
-crossterm = "0.27.0"
-ratatui = "0.26.1"
+cursive = { default-features = false, features = ["crossterm-backend"] }
 
 [dev-dependencies]
 mockall = "0.12.1"
-
-[dependencies.cursive]
-version = "0.20.0"
-default-features = false
-features = ["crossterm-backend"]
